# autoswap

./: .gitignore  LICENSE  MANIFEST.in  PROBLEM.md  README.md  RPGF.md  mcp-tool.json  pyproject.toml
.github/workflows/: publish.yml
api/: .env.example  README.md  railway.toml  requirements.txt  server.py
autoswap/: __init__.py  cli.py  mcp_handler.py  router.py  swap.py
npm/: README.md  package.json
npm/src/: index.d.ts  index.js
scripts/: publish.sh
src/: bridge.py  gas.py  safety.py  swap.py
tests/: test_bridge_dryrun.py  test_gas_coldstart.py  test_router_dryrun.py  test_swap_dryrun.py  test_unit.py
