[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autoswap"
version = "0.1.0"
description = "Cross-chain swaps in one line — built for AI agents. Auto-routing, bridge, gas, slippage protection."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "fino-oss", email = "fino.oss@proton.me" }
]
keywords = [
    "defi", "swap", "cross-chain", "bridge", "crypto",
    "ethereum", "polygon", "base", "arbitrum",
    "ai-agent", "mcp", "autoswap"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.9"
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/fino-oss/autoswap"
Repository = "https://github.com/fino-oss/autoswap"
Documentation = "https://github.com/fino-oss/autoswap#readme"
"Bug Tracker" = "https://github.com/fino-oss/autoswap/issues"

[project.scripts]
autoswap = "autoswap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoswap*"]

[tool.setuptools.package-data]
autoswap = ["*.py"]
